Add VSCode settings and update Maven compile input/output files